--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+
   },
   "keywords": [],
   "author": "",
